force-app/main/default/objects/Visitor_Registration__c/Visitor_Registration__c.object-meta.xml
<CustomObject>
    <description>replica of site visit form</description>
    <label>Visitor Registration</label>
    <nameField>
        <displayFormat>VR-{00000}</displayFormat>
        <label>Visitor Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitor Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>