force-app/main/default/objects/Visitor_Registration__c/fields/AlternateEmail_Address__c.field-meta.xml
<CustomField>
    <fullName>AlternateEmail_Address__c</fullName>
    <label>Alternate Email Address</label>
    <type>Email</type>
</CustomField>