force-app/main/default/objects/Visitor_Registration__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visitor Registrations</relationshipLabel>
    <relationshipName>Visitor_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>