force-app/main/default/objects/Visitor_Registration__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acountant</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Air Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>