force-app/main/default/objects/Visitor_Registration__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>PropStrength__Request__c</referenceTo>
    <relationshipLabel>Visitor Registrations</relationshipLabel>
    <relationshipName>Visitor_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>