force-app/main/default/objects/Visitor_Registration__c/fields/File_Content__c.field-meta.xml
<CustomField>
    <fullName>File_Content__c</fullName>
    <label>File Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>