force-app/main/default/objects/Visitor_Registration__c/fields/Interested_in__c.field-meta.xml
<CustomField>
    <fullName>Interested_in__c</fullName>
    <label>Interested in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Garden Houses</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Plots</fullName>
            </value>
            <value>
                <fullName>TownHouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>