force-app/main/default/objects/Visitor_Registration__c/fields/product_Type__c.field-meta.xml
<CustomField>
    <fullName>product_Type__c</fullName>
    <label>Product Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>