force-app/main/default/objects/Visitor_Registration__c/fields/Project1__c.field-meta.xml
<CustomField>
    <fullName>Project1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>PropStrength__Projects__c</referenceTo>
    <relationshipLabel>Visitor Registrations</relationshipLabel>
    <relationshipName>Visitor_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>