force-app/main/default/objects/Visitor_Registration__c/fields/Purpose_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Purchase__c</fullName>
    <label>Purpose of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>End Use</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>