force-app/main/default/objects/Visitor_Registration__c/fields/Raw_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Raw_Request_Body__c</fullName>
    <label>Raw Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>