force-app/main/default/objects/Visitor_Registration__c/fields/Remarks_if_any__c.field-meta.xml
<CustomField>
    <fullName>Remarks_if_any__c</fullName>
    <label>Remarks (if any)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>