force-app/main/default/objects/Visitor_Registration__c/fields/Sales_Adviser__c.field-meta.xml
<CustomField>
    <fullName>Sales_Adviser__c</fullName>
    <label>Sales Adviser</label>
    <length>50</length>
    <type>Text</type>
</CustomField>