force-app/main/default/objects/Visitor_Registration__c/fields/Scanned_Source__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Source__c</fullName>
    <label>Scanned Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>