force-app/main/default/objects/Visitor_Registration__c/fields/ScannedSource__c.field-meta.xml
<CustomField>
    <fullName>ScannedSource__c</fullName>
    <label>ScannedSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>