force-app/main/default/objects/Visitor_Registration__c/fields/Site_Visit_Form__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit Form</label>
    <referenceTo>Customer_Registration__c</referenceTo>
    <relationshipLabel>Visitor Registrations</relationshipLabel>
    <relationshipName>Visitor_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>