force-app/main/default/objects/Visitor_Registration__c/fields/Sobha_Connect_Id__c.field-meta.xml
<CustomField>
    <fullName>Sobha_Connect_Id__c</fullName>
    <label>Sobha Connect Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>