force-app/main/default/objects/Visitor_Registration__c/fields/Sobha_Connect_Name__c.field-meta.xml
<CustomField>
    <fullName>Sobha_Connect_Name__c</fullName>
    <label>Sobha Connect Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>