force-app/main/default/objects/Visitor_Registration__c/fields/UAE_Resident__c.field-meta.xml
<CustomField>
    <fullName>UAE_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UAE Resident</label>
    <type>Checkbox</type>
</CustomField>