force-app/main/default/objects/Visitor_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Sales_Adviser__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>